adjusted CSS for delete post form. the z-index and page layout was causing issues that I believe are fixed now.

--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -329,11 +329,17 @@
   justify-content: space-between;
 }
 
+#deleteCard {
+  position: relative;
+  right: 23vw;
+  width:270px;
+}
+
 .delete-post {
   right: 5vw;
   top: 3vh;
-  position: absolute;
-  right: 26vw;
+  position: relative;
+  /* background: #ffffff; */
   color: #000;
   border-radius: 10px;
   width: 40px;
